--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -48,7 +48,7 @@ Sean Webb\footnote{Sandia National Laboratory};
 
 \vspace{.3truein}
 \centerline{\bf Abstract}
-
+ Helical compression springs are the one of the most commonly used mechanical components for applications spanning diverse fields. Therefore spring design is one of the most commonly performed tasks in the industry. To this regard, this work provides an intelligent supporting tool to aid the designers to obtain an optimal spring that satisfies their requirements. The tool, which is developed using an object-oriented design framework, provides the freedom to the user to interchange between constraints and objectives to be able to design the optimal spring. Given a problem definition, this tool also provides a feasibility plot which allows the user to refine the problem definition, if necessary. Creep and relaxation models are also incorporated into the tool. The tool uses DIRECT, a global search algorithm to perform the design optimization.
 
 \section{Introduction}
 \label{sec:Introduction}
