Added Tianyu's creep and relaxation formulas.

--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -373,14 +373,19 @@ Faculty Mentors: I. Ipsen and R. Smith}
 	
 		
 	\column{.5\textwidth}
+			 \tiny$s(t) -s(0) = \left( {(d_{\text{i}}+d_{\text{w}})\epsilon\over \pi}{4+3n\over n+1} \right)^{n+1} {2^n\pi (d_{\text{i}}+d_{\text{w}})^2 N_{\text{a}} c\over kd_{\text{w}}^{4+3n}} t^k
+$
 			
-			\vspace{1.5in}
-				\tiny$ \Phi = \frac{4}{ G\theta d_w^4}\int_0^{d_w} r^2 \left( (G\theta r)^{-n} + {c\over k} Gnt^k \right)^{-\frac{1}{n}} \,\mathrm{d} r
-$
-\centering where
-$
-\theta = {2s\over \pi N_a ((d_i+d_o)/2)^2}
-$
+			
+			\vspace{1.2in}
+%				\tiny$ \Phi = \frac{4}{ G\theta d_w^4}\int_0^{d_w} r^2 \left( (G\theta r)^{-n} + {c\over k} Gnt^k \right)^{-\frac{1}{n}} \,\mathrm{d} r$\\
+\[
+\tiny\Phi = \frac{2\pi N_{\text{a}} (d_{\text{i}}+d_{\text{w}})^2}{Gsd_{\text{w}}^4} A\]
+\[ \tiny A = \int_0^{d_\text{w}} r^2 \left(\left(\frac{2Gsr}{\pi N_{\text{a}} (d_{\text{i}}+d_{\text{w}})^2}\right)^{-n} + {c\over k} Gnt^k \right)^{-{1\over n}} \,\mathrm{d} r
+\]
+%\centering where,
+%$\theta = {2s\over \pi N_a ((d_i+d_o)/2)^2}$
+\centering where $c$,$k$,$n$ are temperature and material dependent constants.
 		
 		
 	
